<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".DetailMahasiswa"
    android:id="@+id/scrollView1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nomor" />

        <EditText
            android:id="@+id/add_new_nomor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nomor"
            android:enabled="false"
            android:layout_marginBottom="30dp"
            android:ems="10" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_address" />

        <EditText
            android:id="@+id/add_new_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"
            android:enabled="false"
            android:layout_marginBottom="30dp"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_daya" />

        <EditText
            android:id="@+id/add_new_daya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_daya"
            android:layout_marginBottom="30dp"
            android:enabled="false"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_penyulang" />

        <EditText
            android:id="@+id/add_new_penyulang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="80dp"
            android:enabled="false"
            android:hint="@string/hint_penyulang" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tiang" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioTiang"
            android:gravity="left">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="1 Tiang"
                android:id="@+id/radio1Tiang" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 Tiang"
                android:id="@+id/radio2Tiang"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>