<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".FormGardu"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nomor" />

        <EditText
            android:id="@+id/add_new_nomor_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nomor"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="text">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_address" />

        <EditText
            android:id="@+id/add_new_address_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_daya" />

        <EditText
            android:id="@+id/add_new_daya_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_daya"
            android:inputType="numberDecimal"
            android:layout_marginBottom="30dp"
            android:ems="10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_penyulang" />

        <EditText
            android:id="@+id/add_new_penyulang_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_penyulang"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tiang" />


        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioTiangForm"
            android:gravity="left">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="1 Tiang"
                android:onClick="onRadioClick"
                android:id="@+id/radio1TiangForm" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 Tiang"
                android:onClick="onRadioClick"
                android:id="@+id/radio2TiangForm"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>